# openmm-atmmetaforce-plugin

./: CMakeLists.txt  README.md
doc/: Doxyfile
example/: desmonddmsfile75.py  temoa-g1-g4.dms  test.py  test_explicit.py
example/abfe/: abfe.py  temoa-g1-equil.xml
example/rbfe/: rbfe.py  temoa-g1-g4-equil.xml
openmmapi/include/: ATMMetaForce.h  ATMMetaForceKernels.h  ATMMetaForceVersion.h
openmmapi/include/internal/: ATMMetaForceImpl.h  windowsExportATMMetaForce.h
openmmapi/src/: ATMMetaForce.cpp  ATMMetaForceImpl.cpp  ATMMetaForceKernels.cpp
python/: ATMMetaForceUtils.py  CMakeLists.txt  atmmetaforceplugin.i  setup.py
python/tests/: test_abfe.py
serialization/: CMakeLists.txt
serialization/include/: ATMMetaForceProxy.h
serialization/src/: ATMMetaForceProxy.cpp  SerializationProxyRegistration.cpp
serialization/tests/: CMakeLists.txt  TestSerializeATMMetaForce.cpp
