ENABLE_TESTING()

ADD_EXECUTABLE(TestSerializeATMMetaForce TestSerializeATMMetaForce.cpp)
TARGET_LINK_LIBRARIES(TestSerializeATMMetaForce ${SHARED_ATMMETAFORCE_TARGET})

SET_TARGET_PROPERTIES(TestSerializeATMMetaForce PROPERTIES LINK_FLAGS "${EXTRA_COMPILE_FLAGS}" COMPILE_FLAGS "${EXTRA_COMPILE_FLAGS}")
ADD_TEST(TestSerializeATMMetaForce ${EXECUTABLE_OUTPUT_PATH}/TestSerializeATMMetaForce)
